@@ -3,9 +3,11 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
-* WIP: Feature: added @@xml view for assessments to export information
+* Bug fix: improved esms xml unicode handling for certain cases like typology metadata.
+  [demarant #14871]
+* Feature: added @@esms.xml view for assessments to export information
   according to ESMS metadata format
-  [tiberich #14871 EEA]
+  [tiberich, demarant #14871 EEA]
 
 7.0 - (2013-06-17)
 ------------------
